--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>anões</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+<header>
         <h1>ANÕES</h1>
     </header>
+    <main class="body">
+        <div class="container">
+            <h1>MINHA PÁGINA</h1>
+            <p class="titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, tempore vel. Nisi, vitae sint! Eligendi qui natus beatae iste quos. Laudantium aliquid cupiditate, fugit deserunt modi atque. Enim, quidem excepturi?</p>
+            <img src="img/felps-anão.jpg" alt="felps" srcset="">
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolor voluptate impedit culpa sit. Et at, dolor odio exercitationem doloribus, voluptate dicta quod in autem quos, eius placeat perspiciatis reiciendis.</p>
+        </div>
+    </main>
+
 </body>
 <script src="script.js"></script>
 </html>
