--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <footer>
+        <div class="titulo">
+            <h2>Titulo</h2>
+            <h2>Titulo</h2>
+            <h2>Titulo</h2>
+        </div>
+        <div class="sim">
+            <img src="img/imagem.jpg" alt="">
+            <img src="img/imagem.jpg" alt="">
+            <img src="img/imagem.jpg" alt="">
+        </div>
+        <div class="textos">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, modi debitis ex iure, ducimus, facere aut consequatur perspiciatis excepturi quasi minima. Vitae atque odit sunt iusto vero voluptatibus blanditiis accusamus!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum ad recusandae impedit voluptatem maxime et officia quos necessitatibus excepturi, quas corporis deleniti esse, repudiandae alias sed atque ab, commodi quidem?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias nam asperiores dolorum ex earum ad eaque quod numquam nulla dolores odio, accusamus obcaecati natus exercitationem quia optio, eius nostrum?</p>
+        </div>
+        <input type="button" value="Ler mais" id="button">
+        <input type="button" value="Ler mais" id="button2">
+        <input type="button" value="Ler mais" id="button3">
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
